# xv6-riscv-os

./: .gitignore  Makefile
.github/workflows/: UserTests.yml
ci/docker/: Dockerfile  dependencies.sh
kernel/: defs.h  main.c  printf.c  proc.c  syscall.c  syscall.h  sysproc.c
kernel/rust/: Cargo.toml
kernel/rust/.cargo/: config.toml
kernel/rust/src/: dump.rs  hello.rs  lib.rs
user/: printf.c  user.h  usys.pl
user/rust/: Cargo.toml
user/rust/.cargo/: config.toml
user/rust/.zed/: settings.json
user/rust/src/: goal.rs  hello.rs  main.rs  ping.rs
