[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "hello"
path = "src/hello.rs"

[[bin]]
name = "ping"
path = "src/ping.rs"

[[bin]]
name = "goal"
path = "src/goal.rs"

[[bin]]
name = "dump"
path = "src/dump.rs"
